# ifttt-v0

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Procfile  Rocket.toml
hello-1/: IDENTITY  OPTIONS-000005  temp-dirs-record.txt
hello-1/cockroach-temp790005173/: IDENTITY  OPTIONS-000005
src/: main.rs
src/resources/: mod.rs
src/storage/: interactions.rs
