[package]
name = "ifttt-v0"
version = "0.1.0"
authors = ["Spencer Evans <spencer@commure.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0"
postgres = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.26"
serde_derive = "1.0.26"
serde_json = "1.0.24"
tokio = "0.1.7"
reqwest = "0.9.5"
r2d2 = "0.8"
r2d2_postgres = "*"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["postgres_pool", "json"]
